--- a/src/About.css
+++ b/src/About.css
@@ -29,7 +29,7 @@ padding-bottom: 10px;
 .Group-img{
 width:29rem;
 height: 34rem;
-border-bottom: 10px solid blue;
+border-bottom: 10px solid  rgb(47,51,105);
 border-top: 10px solid orangered;
 }
 
@@ -38,14 +38,14 @@ border-top: 10px solid orangered;
     width:23rem;
     height: 31rem;
     border-bottom: 10px solid orangered;
-    border-top: 10px solid blue;
+    border-top: 10px solid  rgb(47,51,105);
     }
 }
 
 .Group-img:hover{
   width:29rem;
   border-bottom: 10px solid orangered;
-  border-top: 10px solid blue;
+  border-top: 10px solid  rgb(47,51,105);
   filter: blur(1px) saturate(1.2);
   transition: ease-out 0.5s;
   }
@@ -53,7 +53,7 @@ border-top: 10px solid orangered;
   @media (max-width:500px) {
     .Group-img:hover{
       width:23rem;
-      border-bottom: 10px solid blue;
+      border-bottom: 10px solid  rgb(47,51,105);
       border-top: 10px solid orangered;
       filter: blur(1px) saturate(1.2);
       transition: ease-out 0.5s;
@@ -185,11 +185,15 @@ border-top: 10px solid orangered;
 .about-content-p{
   border-left: 3px solid   orangered;
   opacity: 0.8;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 15px;
-padding:34px;
+padding:25px;
 font-family: roboto;
 text-align: center;
+}
+
+.content-lines{
+color: orangered;
 }
 
 @media (max-width:767px){
