--- a/src/Services.css
+++ b/src/Services.css
@@ -75,18 +75,20 @@ background-repeat: no-repeat;
   transform: rotateY(180deg);
   position: absolute;
   height: 300px;
-  box-shadow: 10px 10px 0px 0px ;
+  box-shadow: 10px 10px 0px 0px rgb(47,51,105);
 border: 1px solid rgba(0, 0, 0, 0.103);
 }
 
 .card-content{
   color: black;
-  padding-top:5%;
-  padding: 22px;
+  padding: 21px;
+  display: flex;
+  align-items: stretch;
   text-align: center;
   font-family:roboto;
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 400;
+  font-family: roboto;
 opacity: 0.9;
 
 }
