--- a/src/Whychooseus.css
+++ b/src/Whychooseus.css
@@ -9,7 +9,7 @@
   text-align: center;
 border-radius: 200px;
 border-left: 5px solid  orange;
-border-bottom: 5px solid  rgb(64, 64, 255);
+border-bottom: 5px solid  rgb(47,51,105);
 }
 
 .choose-titel{
@@ -19,7 +19,7 @@ border-bottom: 5px solid  rgb(64, 64, 255);
 }
 
 .qus-mark{
-  color:blue;
+  color:rgb(0, 0, 109);
   text-decoration: none;
 }
 
