--- a/src/components/myCarousel/MyCarousel.css
+++ b/src/components/myCarousel/MyCarousel.css
@@ -24,7 +24,7 @@
     display: block;
   }
   
-  .carousel-slide{
+  .carousel-slide1{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -33,53 +33,55 @@
   }
 
  @media (max-width: 768px) {
-    .carousel-slide{
+    .carousel-slide1{
       display: flex;
       align-items:start;
       text-align:center;
-      margin-top: 25px;
+      padding-top: 50px;
+      padding-bottom: 100px;
+      padding-right: 30px;
+      padding-left:30px;
     } } 
 
-    .carousel-slide1{
+    .carousel-slide2{
       display: flex;
       flex-wrap: wrap;
       align-items: center;
-      margin-top: 15px;
+      margin-top: 10px;
       padding-left:60px;
     }
   
    @media (max-width: 768px) {
-      .carousel-slide1{
+      .carousel-slide2{
         display: flex;
         align-items:start;
         text-align:center;
         margin-top: 50px;
         padding-top: 50px;
-        padding-left: 10px;
+        padding-left: 30px;
+        padding-right: 40px;
       } }
 
-      .carousel-slide2{
-        margin-left: 0px;
-        padding-left: 0px;
-        padding-top: 0px;
-        }
+      .carousel-slide3{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-top: 15px;
+        padding-left:60px;
+      }
+    
+     @media (max-width: 768px) {
+        .carousel-slide3{
+          display: flex;
+          align-items:start;
+          text-align:center;
+          margin-top: 50px;
+          padding-top: 50px;
+          padding-left: 30px;
+          padding-right: 40px;
+        } }
 
-       @media (max-width:768px) {
-        .carousel-slide2{
-           padding-left: 70px;
-        }
-
-       }
-  .text-container {
-   padding: 15px;
-  }
-
-  @media (max-width: 768px) {
-    .text-container {
-      padding-left: 0px;
-      margin-left: 0px;
-    }
-  }
+  
   
   @media (max-width: 768px) {
     .row {
@@ -89,7 +91,7 @@
       order: 2;
     }
     .img-container {
-      order: 1;
+      order: 2;
     }
   }
   .image-slid1{
@@ -113,7 +115,7 @@
   .slide23-heading{
    
     color:#ff4328;
-    margin-left: 55px;
+    margin-left: 40px;
   }
 
   @media (max-width: 768px) {
@@ -150,13 +152,19 @@
     }
   }
   .slid-img-1{
-    height: 500px;
+    height: 200px;
   }
+
+ @media (max-width:768px) {
+  .slid-img-1{
+    height: 200px;
+    padding-top: 800px;
+    margin-top: 800px;
+  }
+ }
+
   .paragraph3{
-    padding-left: 900px;
+    padding-left: 1000px;
     margin-left: 1000px;
     
-  }
-  .text-container2 {
-     margin-left: 100px;
   }
