--- a/src/Components copy/ReqService.css
+++ b/src/Components copy/ReqService.css
@@ -1,7 +1,7 @@
 
-.wrapper{
+/* .wrapper{
     padding: 15px 30px;
-}
+} */
 
 .contact-form-label{
     color:#2F3369;
@@ -22,7 +22,7 @@
 }
 
 
-.contact-input{
+/* .contact-input{
     width: 100%;
     padding: 0px 0px;
     border-radius: 10px;
@@ -31,7 +31,7 @@
     position: relative;
     height: 40px;
     margin-bottom: 10px;
-}
+} */
 
 .contact-form-dropdown{
     width: 100%;
@@ -93,11 +93,7 @@ padding-bottom: 5px;
 .OS_image{
     width: 100%;
     height: 100%;
-    transition: all 1s ease-in-out;
     mix-blend-mode: multiply;
-}
-.OS_image:hover{
-    transform: scale(0.9);
 }
 
 @media (max-width:500px) {
