--- a/src/Components copy/ReqService.css
+++ b/src/Components copy/ReqService.css
@@ -1,7 +1,13 @@
 
-/* .wrapper{
-    padding: 15px 30px;
-} */
+.wrapper{
+    padding: 25px 30px;
+}
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 40px;
+}
 
 .contact-form-label{
     color:#2F3369;
@@ -20,18 +26,6 @@
     height: 40px;
     margin-bottom: 15px;
 }
-
-
-/* .contact-input{
-    width: 100%;
-    padding: 0px 0px;
-    border-radius: 10px;
-    border: #c4c8cd 1px solid;
-    font-size: 14px;
-    position: relative;
-    height: 40px;
-    margin-bottom: 10px;
-} */
 
 .contact-form-dropdown{
     width: 100%;
@@ -63,14 +57,8 @@
     border: 3px solid #2F3369;
 }
 
-.input-box{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin-bottom: 40px;
-}
 
-.contact-form-input input {
+/* .contact-form-input input {
     width:100vh;
     height: 100%;
     background: transparent;
@@ -80,7 +68,7 @@
     border-radius: 10px;
     font-size: 16px;
     padding: 15px 30px 15px 15px;
-}
+} */
 .input-box i {
 position: absolute;
 right: 15px;
