--- a/src/components/workProcess/WorkProcess.css
+++ b/src/components/workProcess/WorkProcess.css
@@ -22,7 +22,7 @@
   border-bottom:#ff4328 4px dashed ;
   border-right:#ff4328 4px solid ;
   border-top:rgb(11, 15, 79) 4px dashed ;
-  padding:15px;
+  padding:10px;
 }
 .work-card{
   display: flex;
@@ -30,9 +30,22 @@
   align-items:center;
   flex-direction: column;
   text-align: center;
-  padding:20px ;
+  padding:10px ; 
   width: 250px;
 }
+
+@media (max-width:768px){
+  .work-card{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+    text-align: center;
+ 
+    width: 250px;
+  }
+}
+
 .imgs1{
   height: 195px;
 }
@@ -53,5 +66,5 @@
 }
 .work-main-heading{
 
-  margin-top: 40px;
+  margin-top: 30px;
 }
